sidenav hovering color changed, sidenav overlapping fixed -> ChangeLog #15, 6

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,22 +12,17 @@ mat-sidenav-closed {
     width: 100vw;
 }
 
-
-/* mat-sidenav-content {
-    background-color: black;
-    color: white;
-} */
-
-
-/* a {
-    color: #62c9d5!important;
-} */
-
 .mat-list-item {
     font-size: 20px;
 }
 
-.mat-list-item:hover,
+.mat-list-item:hover {
+    background: #f3f3f3;
+    color: black!important;
+    width: auto;
+    border-radius: 40px;
+}
+
 .active {
     background: #a8f6ff;
     color: black!important;
